--- a/template/.devcontainer/devcontainer.json.jinja
+++ b/template/.devcontainer/devcontainer.json.jinja
@@ -20,19 +20,17 @@
     "set-up-profile": [
       "pwsh",
       "-Command",
-      "New-Item -Force $PROFILE && Copy-Item scripts/Initialize-Shell.ps1 $PROFILE"
+      "New-Item -Force $PROFILE && Copy-Item Dev.ps1 $PROFILE"
     ]
   },
   "postCreateCommand": {
     "sync-py-in-codespace": [
       "pwsh",
       "-Command",
-      "if (Test-Path /.codespaces) { scripts/Sync-Env.ps1 }"
+      "if (Test-Path /.codespaces) { ./Invoke-Uv.ps1 -Sync -Update }"
     ]
   },
-  "postAttachCommand": {
-    "sync-py": ["pwsh", "scripts/Sync-Env.ps1"]
-  },
+  "postAttachCommand": { "sync-py": ["./Invoke-Uv.ps1 -Sync -Update"] },
   "containerEnv": { "DEVCONTAINER": "1" },
   "customizations": {
     "vscode": {
