--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -135,4 +135,4 @@ jobs:
         env:
           CODECOV_TOKEN: "{% raw %}${{ secrets.CODECOV_TOKEN }}{% endraw %}"
       - if: (!(startsWith(matrix.runner, '{{ actions_runner.split('-')[0] }}') && matrix.python == '{{ python_version }}'))
-        run: "./Invoke-Uv.ps1 -PythonVersion '${{ matrix.python }}' pytest"
+        run: "./Invoke-Uv.ps1 -PythonVersion '{% raw %}${{ matrix.python }}{% endraw %}' pytest"
