Template Python version into `pyproject.toml`

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -68,6 +68,7 @@ dev-dependencies = [
   "pytest>=8.2.2",
 ]
 [tool.uv.pip]
+python-version = "{{ python_version }}"
 all-extras = true
 [tool.uv.workspace]
 members = ["packages/*"]
