--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -3,7 +3,7 @@ name: "release"
 concurrency:
   group: "{% raw %}${{ github.workflow }}-${{ github.ref }}{% endraw %}"
   cancel-in-progress: True
-on: ["release"]
+on: ["workflow_dispatch"]
 defaults:
   run:
     shell: "pwsh"
