Handle case where commit hash is missing

--- a/template/dev.ps1.jinja
+++ b/template/dev.ps1.jinja
@@ -222,6 +222,7 @@ function Sync-Template {
     if (!(Get-Command 'uv' -ErrorAction 'Ignore')) { Install-Uv -Update }
     $Copier = "copier@$(Get-Content '.copier-version')"
     $Ref = $Stay ? (Get-Content '.copier-answers.yml' | Find-Pattern '^_commit:\s.+-(.+)$') : $Ref
+    if (!$Ref) {$Ref = 'HEAD'}
     if ($Recopy) {
         if ($Prompt) { return uvx $Copier recopy $Defaults --vcs-ref=$Ref }
         return uvx $Copier recopy --overwrite --defaults
